Added world parameter, self permission is now included in other permissions.
Resolves #3

--- a/src/main/resources/lang/Messages_de_DE.properties
+++ b/src/main/resources/lang/Messages_de_DE.properties
@@ -21,8 +21,8 @@ message.source: Ursache
 message.commandList: Befehlsliste - <Erforderlich> [Optional]
 message.descHelp: Zeigen Sie die Befehlsliste an.
 message.descChangeSky: Den Himmel wechseln.
-message.descFreeze: Einfrieren der Welt.
-message.descUnfreeze: Unfreeze die Welt.
+message.descFreeze: Einfrieren.
+message.descUnfreeze: Unfreeze.
 message.descReload: Laden Sie die Konfiguration neu.
 message.descVersion: Versionsinformationen anzeigen.
 message.pluginLoading: {0} ist laden.
