--- a/src/main/resources/lang/Messages_en_US.properties
+++ b/src/main/resources/lang/Messages_en_US.properties
@@ -9,20 +9,24 @@ success.packetUnfreezeSentTo: Sent packet to {0} (F3+A to reload chunks).
 error.packetError: Failed to send packet.
 error.packetErrorTo: Failed to send packet to {0}.
 error.logPacketError: Packet could not be sent.
+error.specifyWorld: You must specify a world.
+error.worldNotFound: The world {0} does not exist.
 error.outOfBoundsUpper: The packet number must not exceed {0}.
 error.outOfBoundsLower: The packet number must not be less than {0}.
 success.reloadSuccess: Plugin successfully reloaded.
 error.reloadFail: Plugin failed to reload, see console for details..
 message.player: player
 message.everyone: everyone
+message.allPlayersIn: all players in
+message.world: world
 message.version: Version
 message.metrics: Metrics
 message.source: Source
 message.commandList: Command List - <Required> [Optional]
 message.descHelp: View the command list.
 message.descChangeSky: Change the sky.
-message.descFreeze: Freeze the world.
-message.descUnfreeze: Unfreeze the world.
+message.descFreeze: Freeze.
+message.descUnfreeze: Unfreeze.
 message.descReload: Reload the configuration.
 message.descVersion: View version information.
 message.pluginLoading: {0} is loading.
