--- a/src/main/resources/lang/Messages_es_AR.properties
+++ b/src/main/resources/lang/Messages_es_AR.properties
@@ -15,14 +15,15 @@ success.reloadSuccess: El plugin ha sido recargado correctamente.
 error.reloadFail: El plugin no pudo ser recargado, revis la consola para obtener mas detalles..
 message.player: jugador
 message.everyone: todos
+message.world: mundo
 message.version: Version
 message.metrics: Metrica
 message.source: Fuente
 message.commandList: Lista de Comandos - <Requerido> [Opcional]
 message.descHelp: Ver la lista de comandos.
 message.descChangeSky: Cambiar el cielo.
-message.descFreeze: Congelar el mundo.
-message.descUnfreeze: Descongelar el mundo.
+message.descFreeze: Congelar.
+message.descUnfreeze: Descongelar.
 message.descReload: Recargar la configuracion.
 message.descVersion: Ver la informacion del plugin.
 message.pluginLoading: {0} esta cargando.
