--- a/src/main/resources/lang/Messages_es_EC.properties
+++ b/src/main/resources/lang/Messages_es_EC.properties
@@ -15,14 +15,15 @@ success.reloadSuccess: El Plugin se ha vuelto a cargar correctamente.
 error.reloadFail: El Plugin nose pudo volver a cargar, consulte la consola para obtener más detalles..
 message.player: jugador
 message.everyone: todos
+message.world: mundo
 message.version: Versión
 message.metrics: Métrica
 message.source: Fuente
 message.commandList: La Lista de Comandos - <Requiere> [Opcional]
 message.descHelp: Ver lista de mandatos.
 message.descChangeSky: Cambia el cielo.
-message.descFreeze: Congelar el mundo.
-message.descUnfreeze: Descongelar el mundo.
+message.descFreeze: Congelar.
+message.descUnfreeze: Descongelar.
 message.descReload: Vuelva a cargar la configuración.
 message.descVersion: Ver información de versión.
 message.pluginLoading: {0} esta cargando.
