--- a/src/main/resources/lang/Messages_nl_NL.properties
+++ b/src/main/resources/lang/Messages_nl_NL.properties
@@ -15,14 +15,15 @@ success.reloadSuccess: Plugin herladen.
 error.reloadFail: Plugin herladen mislukt, check de console voor details..
 message.player: speler
 message.everyone: iedereen
+message.world: wereld
 message.version: Versie
 message.metrics: Statistieken
 message.source: Bron
 message.commandList: Opdrachtenlijst - <Verplicht> [Optioneel]
 message.descHelp: De opdrachtenlijst bekijken.
 message.descChangeSky: Verander de hemel.
-message.descFreeze: Bevries de wereld.
-message.descUnfreeze: Ontdooi de wereld.
+message.descFreeze: Bevries.
+message.descUnfreeze: Ontdooi.
 message.descReload: Herlaad de configuratie.
 message.descVersion: Versie informatie weergeven.
 message.pluginLoading: {0} is aan het laden.
