--- a/src/main/resources/lang/Messages_it_IT.properties
+++ b/src/main/resources/lang/Messages_it_IT.properties
@@ -9,20 +9,24 @@ success.packetUnfreezeSentTo: Pacchetto inviato a {0} (F3+A per ricaricare i blo
 error.packetError: Non è riuscito a inviare il pacchetto.
 error.packetErrorTo: Non è riuscito a inviare il pacchetto a {0}.
 error.logPacketError: Pacchetto non poteva essere inviato.
+error.specifyWorld: Lei debba specificare un mondo.
+error.worldNotFound: Il mondo {0} non esiste.
 error.outOfBoundsUpper: Il numero del pacchetto non deve superare {0}.
 error.outOfBoundsLower: Il numero del pacchetto non deve essere meno di {0}.
 success.reloadSuccess: Il plugin è ricaricato con successo.
 error.reloadFail: Il plugin non è riuscito a ricaricare, veda la console per dettagli..
 message.player: giocatore
 message.everyone: tutti
+message.allPlayersIn: ogni giocatore in
+message.world: mondo
 message.version: Versione
 message.metrics: Metriche
 message.source: Sorgente
 message.commandList: Elenco dei Comandi - <Richiesto> [Opzionale]
 message.descHelp: Visualizzare l'elenco dei comandi.
 message.descChangeSky: Cambiare il cielo.
-message.descFreeze: Congelare il mondo.
-message.descUnfreeze: Scongelare il mondo.
+message.descFreeze: Congelare.
+message.descUnfreeze: Scongelare.
 message.descReload: Ricaricare la configurazione.
 message.descVersion: Visualizzare informazione di versione.
 message.pluginLoading: {0} sta caricando.
