Added missing translations to es_EC.

--- a/src/main/resources/lang/Messages_es_EC.properties
+++ b/src/main/resources/lang/Messages_es_EC.properties
@@ -9,12 +9,15 @@ success.packetUnfreezeSentTo: Enviado el paquete a {0} (F3+A para recargar trozo
 error.packetError: Error en mandar el paquete.
 error.packetErrorTo: Eror en mandando el paquete a {0}.
 error.logPacketError: No se pudo enviar el paquete.
+error.specifyWorld: Necesitas especificar un mundo.
+error.worldNotFound: El mundo {0} no existe.
 error.outOfBoundsUpper: El número de paquete no debe exceder {0}.
 error.outOfBoundsLower: El número de paquete no debe ser inferior a{0}.
 success.reloadSuccess: El Plugin se ha vuelto a cargar correctamente.
 error.reloadFail: El Plugin nose pudo volver a cargar, consulte la consola para obtener más detalles..
 message.player: jugador
 message.everyone: todos
+message.allPlayersIn: todos los jugadores en
 message.world: mundo
 message.version: Versión
 message.metrics: Métrica
