--- a/src/main/resources/lang/Messages_nl_NL.properties
+++ b/src/main/resources/lang/Messages_nl_NL.properties
@@ -9,12 +9,15 @@ success.packetUnfreezeSentTo: Packet verzonden naar {0} (F3+A om de chunks te he
 error.packetError: Packet verzenden mislukt.
 error.packetErrorTo: Packet naar {0} verzenden mislukt.
 error.logPacketError: Packet kan niet verzonden worden.
+error.specifyWorld: Specificeer een wereld.
+error.worldNotFound: De wereld {0} bestaat niet.
 error.outOfBoundsUpper: Het packet nummer mag niet groter zijn dan {0}.
 error.outOfBoundsLower: Het packet nummer mag niet kleiner zijn dan {0}.
 success.reloadSuccess: Plugin herladen.
 error.reloadFail: Plugin herladen mislukt, check de console voor details..
 message.player: speler
 message.everyone: iedereen
+message.allPlayersIn: alle spelers in
 message.world: wereld
 message.version: Versie
 message.metrics: Statistieken
