--- a/src/main/resources/lang/Messages_de_DE.properties
+++ b/src/main/resources/lang/Messages_de_DE.properties
@@ -9,12 +9,16 @@ success.packetUnfreezeSentTo: Sende Päckchen zu {0} (F3+A Um Blöcke neu zu lad
 error.packetError: Konnte kein Paket senden.
 error.packetErrorTo: Konnte kein Paket an {0} senden.
 error.logPacketError: Paket konnte nicht gesendet werden.
+error.specifyWorld: Du musst eine Welt angeben.
+error.worldNotFound: Die Welt {0} existiert nicht.
 error.outOfBoundsUpper: Die Paketnummer darf {0} nicht überschreiten.
 error.outOfBoundsLower: Die Paketnummer darf nicht kleiner als {0} sein.
 success.reloadSuccess: Plugin erfolgreich neu geladen.
 error.reloadFail: Plugin konnte nicht neu geladen werden, siehe Konsole für Details.
 message.player: Spieler
 message.everyone: jedermann
+message.allPlayersIn: Alle Spieler in
+message.world: welt
 message.version: Version
 message.metrics: Metriken
 message.source: Ursache
