--- a/src/main/resources/lang/Messages_es_AR.properties
+++ b/src/main/resources/lang/Messages_es_AR.properties
@@ -9,12 +9,15 @@ success.packetUnfreezeSentTo: Enviado el paquete a {0} (F3+A para recargar el mu
 error.packetError: Error al mandar el paquete.
 error.packetErrorTo: Error al mandar el paquete a {0}.
 error.logPacketError: No se pudo enviar el paquete.
+error.specifyWorld: Debes especificar el mundo.
+error.worldNotFound: El mundo {0} no existe.
 error.outOfBoundsUpper: El numero de paquete no debe ser mayor a {0}.
 error.outOfBoundsLower: El numero de paquete no debe ser inferior a {0}.
 success.reloadSuccess: El plugin ha sido recargado correctamente.
 error.reloadFail: El plugin no pudo ser recargado, revis la consola para obtener mas detalles..
 message.player: jugador
 message.everyone: todos
+message.allPlayersIn: todos los jugadores en
 message.world: mundo
 message.version: Version
 message.metrics: Metrica
