--- a/SkyChangerSponge/src/main/resources/lang/Messages_es_AR.properties
+++ b/SkyChangerSponge/src/main/resources/lang/Messages_es_AR.properties
@@ -1,7 +1,31 @@
+#
+# This file is part of SkyChanger, licensed under the MIT License (MIT).
+#
+# Copyright (c) 2017-2018 Daniel D. Scalzi <https://github.com/dscalzi/SkyChanger>
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in
+# all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+# THE SOFTWARE.
+#
+
 error.noPermission: No tienes permiso para hacer eso.
 error.denyNonPlayer: Solo los jugadores pueden utilizar ese comando.
-error.packetOverflow: No se pudo enviar el paquete, el numero está fuera del rango.
-error.playerNotFound: No se pudo encontrar a {0}, ¿esta conectado?
+error.packetOverflow: No se pudo enviar el paquete, el numero estï¿½ fuera del rango.
+error.playerNotFound: No se pudo encontrar a {0}, ï¿½esta conectado?
 success.packetSent: Paquete enviado.
 success.packetSentTo: Enviado el paquete a {0}.
 success.packetUnfreezeSent: Paquete enviado (F3+A para recargar el mundo).
