--- a/SkyChangerSponge/src/main/resources/lang/Messages_no_NO.properties
+++ b/SkyChangerSponge/src/main/resources/lang/Messages_no_NO.properties
@@ -1,20 +1,44 @@
-error.noPermission: Du har ikke tilgang til å gjøre dette.
+#
+# This file is part of SkyChanger, licensed under the MIT License (MIT).
+#
+# Copyright (c) 2017-2018 Daniel D. Scalzi <https://github.com/dscalzi/SkyChanger>
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in
+# all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+# THE SOFTWARE.
+#
+
+error.noPermission: Du har ikke tilgang til ï¿½ gjï¿½re dette.
 error.denyNonPlayer: Bare spillere kan bruke denne kommandoen
 error.packetOverflow: Pakken kunne ikke bli sendt, nummeret er ute av rekkevidde.
-error.playerNotFound: Kan ikke finne spilleren {0}. Er spilleren på nett?
+error.playerNotFound: Kan ikke finne spilleren {0}. Er spilleren pï¿½ nett?
 success.packetSent: Pakke sendt.
 success.packetSentTo: Pakke sendt til {0}. 
-success.packetUnfreezeSent: Pakke sendt. (F3+A får å reloade blokkene)
-success.packetUnfreezeSentTo: Sendte pakke til {0} (F3+A får å reloade blokkene)
+success.packetUnfreezeSent: Pakke sendt. (F3+A fï¿½r ï¿½ reloade blokkene)
+success.packetUnfreezeSentTo: Sendte pakke til {0} (F3+A fï¿½r ï¿½ reloade blokkene)
 error.packetError: Sending mislykket.
 error.packetErrorTo: Sendingen til {0} misslykket.
 error.logPacketError: Pakken kunne ikke bli sendt.
-error.specifyWorld: Du må spesifisere verdenen.
+error.specifyWorld: Du mï¿½ spesifisere verdenen.
 error.worldNotFound: {0} er ikke en verden.
-error.outOfBoundsUpper: Pakke nummeret kan ikke være mer en {0}.
-error.outOfBoundsLower: Pakke nummeret kan ikke være mindre en {0}.
+error.outOfBoundsUpper: Pakke nummeret kan ikke vï¿½re mer en {0}.
+error.outOfBoundsLower: Pakke nummeret kan ikke vï¿½re mindre en {0}.
 success.reloadSuccess: Vellyket reload.
-error.reloadFail:  Mislykket reload, se console får mer info.
+error.reloadFail:  Mislykket reload, se console fï¿½r mer info.
 message.player: Spiller
 message.everyone: Alle
 message.allPlayersIn: Alle spillere i
@@ -22,9 +46,9 @@ message.world: Verden
 message.version: Version
 message.metrics: beregninger
 message.source: Kilde
-message.commandList: Kommando Liste - <Nødvendig> [Valgfri]
+message.commandList: Kommando Liste - <Nï¿½dvendig> [Valgfri]
 message.descHelp: Se kommando listen.
-message.descChangeSky: Forandre på himmelen.
+message.descChangeSky: Forandre pï¿½ himmelen.
 message.descFreeze: Frys.
 message.descUnfreeze: Frigi.
 message.descReload: Last inn konfigurasjonen.
