--- a/resources/lang/Messages_no_NO.properties
+++ b/resources/lang/Messages_no_NO.properties
@@ -22,23 +22,23 @@
 # THE SOFTWARE.
 #
 
-error.noPermission: Du har ikke tilgang til ï¿½ gjï¿½re dette.
+error.noPermission: Du har ikke tilgang til å gjøre dette.
 error.denyNonPlayer: Bare spillere kan bruke denne kommandoen
 error.packetOverflow: Pakken kunne ikke bli sendt, nummeret er ute av rekkevidde.
-error.playerNotFound: Kan ikke finne spilleren {0}. Er spilleren pï¿½ nett?
+error.playerNotFound: Kan ikke finne spilleren {0}. Er spilleren på nett?
 success.packetSent: Pakke sendt.
 success.packetSentTo: Pakke sendt til {0}. 
-success.packetUnfreezeSent: Pakke sendt. (F3+A fï¿½r ï¿½ reloade blokkene)
-success.packetUnfreezeSentTo: Sendte pakke til {0} (F3+A fï¿½r ï¿½ reloade blokkene)
+success.packetUnfreezeSent: Pakke sendt. (F3+A får å reloade blokkene)
+success.packetUnfreezeSentTo: Sendte pakke til {0} (F3+A får å reloade blokkene)
 error.packetError: Sending mislykket.
 error.packetErrorTo: Sendingen til {0} misslykket.
 error.logPacketError: Pakken kunne ikke bli sendt.
-error.specifyWorld: Du mï¿½ spesifisere verdenen.
+error.specifyWorld: Du må spesifisere verdenen.
 error.worldNotFound: {0} er ikke en verden.
-error.outOfBoundsUpper: Pakke nummeret kan ikke vï¿½re mer en {0}.
-error.outOfBoundsLower: Pakke nummeret kan ikke vï¿½re mindre en {0}.
+error.outOfBoundsUpper: Pakke nummeret kan ikke være mer en {0}.
+error.outOfBoundsLower: Pakke nummeret kan ikke være mindre en {0}.
 success.reloadSuccess: Vellyket reload.
-error.reloadFail:  Mislykket reload, se console fï¿½r mer info.
+error.reloadFail:  Mislykket reload, se console får mer info.
 message.player: Spiller
 message.everyone: Alle
 message.allPlayersIn: Alle spillere i
@@ -46,9 +46,9 @@ message.world: Verden
 message.version: Version
 message.metrics: beregninger
 message.source: Kilde
-message.commandList: Kommando Liste - <Nï¿½dvendig> [Valgfri]
+message.commandList: Kommando Liste - <Nødvendig> [Valgfri]
 message.descHelp: Se kommando listen.
-message.descChangeSky: Forandre pï¿½ himmelen.
+message.descChangeSky: Forandre på himmelen.
 message.descFreeze: Frys.
 message.descUnfreeze: Frigi.
 message.descReload: Last inn konfigurasjonen.
