--- a/SkyChanger-Bukkit/src/main/resources/lang/Messages_it_IT.properties
+++ b/SkyChanger-Bukkit/src/main/resources/lang/Messages_it_IT.properties
@@ -22,23 +22,23 @@
 # THE SOFTWARE.
 #
 
-error.noPermission: Non hai il permesso per fare questo.
+error.noPermission: Non hai il permesso per fare questo comando.
 error.denyNonPlayer: Solo giocatori possono usare questo comando.
-error.packetOverflow: Pacchetto non poteva essere inviato, il numero è fuori dal limite.
-error.playerNotFound: Il giocatore {0} non è stato trovato, è in linea?
+error.packetOverflow: Il pacchetto non poteva essere inviato, il numero che hai inserito Ã¨ fuori dal limite.
+error.playerNotFound: Il giocatore {0} non Ã¨ stato trovato, Ã¨ in gioco?
 success.packetSent: Pacchetto inviato.
 success.packetSentTo: Pacchetto inviato a {0}.
 success.packetUnfreezeSent: Pacchetto inviato (F3+A per ricaricare i blocchi).
 success.packetUnfreezeSentTo: Pacchetto inviato a {0} (F3+A per ricaricare i blocchi).
-error.packetError: Non è riuscito a inviare il pacchetto.
-error.packetErrorTo: Non è riuscito a inviare il pacchetto a {0}.
-error.logPacketError: Pacchetto non poteva essere inviato.
-error.specifyWorld: Lei debba specificare un mondo.
+error.packetError: Non Ã¨ riuscito a inviare il pacchetto.
+error.packetErrorTo: Non Ã¨ riuscito a inviare il pacchetto a {0}.
+error.logPacketError: Il pacchetto non poteva essere inviato.
+error.specifyWorld: Devi specificare un mondo.
 error.worldNotFound: Il mondo {0} non esiste.
 error.outOfBoundsUpper: Il numero del pacchetto non deve superare {0}.
 error.outOfBoundsLower: Il numero del pacchetto non deve essere meno di {0}.
-success.reloadSuccess: Il plugin è ricaricato con successo.
-error.reloadFail: Il plugin non è riuscito a ricaricare, veda la console per dettagli..
+success.reloadSuccess: Il plugin Ã¨ ricaricato con successo.
+error.reloadFail: Il plugin non Ã¨ riuscito a ricaricare, guarda la console per dettagli..
 message.player: giocatore
 message.everyone: tutti
 message.allPlayersIn: ogni giocatore in
