--- a/SkyChanger-Bukkit/src/main/resources/lang/Messages_en_US.properties
+++ b/SkyChanger-Bukkit/src/main/resources/lang/Messages_en_US.properties
@@ -33,6 +33,8 @@ success.packetUnfreezeSentTo: Sent packet to {0} (F3+A to reload chunks).
 error.packetError: Failed to send packet.
 error.packetErrorTo: Failed to send packet to {0}.
 error.logPacketError: Packet could not be sent.
+error.radiusFormat: Radius must be a number.
+error.specifyRadius: You must specify a radius.
 error.specifyWorld: You must specify a world.
 error.worldNotFound: The world {0} does not exist.
 error.outOfBoundsUpper: The packet number must not exceed {0}.
@@ -42,6 +44,7 @@ error.reloadFail: Plugin failed to reload, see console for details..
 message.player: player
 message.everyone: everyone
 message.allPlayersIn: all players in
+message.allPlayersInRadius: all players in radius
 message.world: world
 message.version: Version
 message.metrics: Metrics
