--- a/SkyChanger-Bukkit/src/main/resources/lang/Messages_es_AR.properties
+++ b/SkyChanger-Bukkit/src/main/resources/lang/Messages_es_AR.properties
@@ -24,8 +24,8 @@
 
 error.noPermission: No tienes permiso para hacer eso.
 error.denyNonPlayer: Solo los jugadores pueden utilizar ese comando.
-error.packetOverflow: No se pudo enviar el paquete, el numero está fuera del rango.
-error.playerNotFound: No se pudo encontrar a {0}, ¿esta conectado?
+error.packetOverflow: No se pudo enviar el paquete, el numero estÃ¡ fuera del rango.
+error.playerNotFound: No se pudo encontrar a {0}, Â¿esta conectado?
 success.packetSent: Paquete enviado.
 success.packetSentTo: Enviado el paquete a {0}.
 success.packetUnfreezeSent: Paquete enviado (F3+A para recargar el mundo).
@@ -33,6 +33,8 @@ success.packetUnfreezeSentTo: Enviado el paquete a {0} (F3+A para recargar el mu
 error.packetError: Error al mandar el paquete.
 error.packetErrorTo: Error al mandar el paquete a {0}.
 error.logPacketError: No se pudo enviar el paquete.
+error.radiusFormat: El radio debe ser un numero.
+error.specifyRadius: Debes especificar un radio.
 error.specifyWorld: Debes especificar el mundo.
 error.worldNotFound: El mundo {0} no existe.
 error.outOfBoundsUpper: El numero de paquete no debe ser mayor a {0}.
@@ -42,6 +44,7 @@ error.reloadFail: El plugin no pudo ser recargado, revis la consola para obtener
 message.player: jugador
 message.everyone: todos
 message.allPlayersIn: todos los jugadores en
+message.allPlayersInRadius: todos los jugadores en radio
 message.world: mundo
 message.version: Version
 message.metrics: Metrica
