--- a/SkyChanger-Bukkit/src/main/resources/lang/Messages_hu_HU.properties
+++ b/SkyChanger-Bukkit/src/main/resources/lang/Messages_hu_HU.properties
@@ -23,34 +23,37 @@
 #
 
 error.noPermission: Nincs jogod ehhez.
-error.denyNonPlayer: Csak a játékosok használhatják ezt a parancsot.
-error.packetOverflow: A csomagot nem lehetett elküldeni, a szám a hatótávolságon kívül esik.
-error.playerNotFound: A játékos nem található {0}. Elérhetõ?
-success.packetSent: Csomag elküldött.
-success.packetSentTo: Elküldött csomagot {0}.
-success.packetUnfreezeSent: Csomag küldött (F3+A újratölteni a darabokat).
-success.packetUnfreezeSentTo: Elküldött csomagot {0} (F3+A újratölteni a darabokat).
-error.packetError: A csomagküldés sikertelen volt.
-error.packetErrorTo: A csomagküldés sikertelen volt {0}.
-error.logPacketError: A csomagot nem lehet elküldeni.
-error.specifyWorld: Meg kell adnia egy világot.
-error.worldNotFound: A világ {0} nem létezik.
-error.outOfBoundsUpper: A csomagszáma nem haladhatja meg a számot {0}.
-error.outOfBoundsLower: A csomagszáma nem lehet kevesebb {0}.
-success.reloadSuccess: A plugin sikeresen újratöltve.
-error.reloadFail: A plugint nem sikerült újratölteni. A részletekért lásd a konzolt...
-message.player: játékos
+error.denyNonPlayer: Csak a jÃ¡tÃ©kosok hasznÃ¡lhatjÃ¡k ezt a parancsot.
+error.packetOverflow: A csomagot nem lehetett elkÃ¼ldeni, a szÃ¡m a hatÃ³tÃ¡volsÃ¡gon kÃ­vÃ¼l esik.
+error.playerNotFound: A jÃ¡tÃ©kos nem talÃ¡lhatÃ³ {0}. ElÃ©rhetÃµ?
+success.packetSent: Csomag elkÃ¼ldÃ¶tt.
+success.packetSentTo: ElkÃ¼ldÃ¶tt csomagot {0}.
+success.packetUnfreezeSent: Csomag kÃ¼ldÃ¶tt (F3+A ÃºjratÃ¶lteni a darabokat).
+success.packetUnfreezeSentTo: ElkÃ¼ldÃ¶tt csomagot {0} (F3+A ÃºjratÃ¶lteni a darabokat).
+error.packetError: A csomagkÃ¼ldÃ©s sikertelen volt.
+error.packetErrorTo: A csomagkÃ¼ldÃ©s sikertelen volt {0}.
+error.logPacketError: A csomagot nem lehet elkÃ¼ldeni.
+error.radiusFormat: A sugÃ¡rnak szÃ¡mnak kell lennie.
+error.specifyRadius: Meg kell adnia egy sugarat.
+error.specifyWorld: Meg kell adnia egy vilÃ¡got.
+error.worldNotFound: A vilÃ¡g {0} nem lÃ©tezik.
+error.outOfBoundsUpper: A csomagszÃ¡ma nem haladhatja meg a szÃ¡mot {0}.
+error.outOfBoundsLower: A csomagszÃ¡ma nem lehet kevesebb {0}.
+success.reloadSuccess: A plugin sikeresen ÃºjratÃ¶ltve.
+error.reloadFail: A plugint nem sikerÃ¼lt ÃºjratÃ¶lteni. A rÃ©szletekÃ©rt lÃ¡sd a konzolt...
+message.player: jÃ¡tÃ©kos
 message.everyone: mindenki
-message.allPlayersIn: minden játékos
-message.world: világ
-message.version: Verzió
+message.allPlayersIn: minden jÃ¡tÃ©kos
+message.allPlayersInRadius: minden jÃ¡tÃ©kos sugÃ¡rban
+message.world: vilÃ¡g
+message.version: VerziÃ³
 message.metrics: Metrics
-message.source: Forrás
-message.commandList: Parancs lista - <Kötelezõ> [Választható]
-message.descHelp: Megtekinti a parancslistát.
-message.descChangeSky: Megváltoztatja az eget.
-message.descFreeze: Fagyasztás.
-message.descUnfreeze: Visszafagyasztás.
-message.descReload: Újratölti a konfigurációt.
-message.descVersion: A verzió információinak megtekintése.
-message.pluginLoading: {0} betöltõdik.
+message.source: ForrÃ¡s
+message.commandList: Parancs lista - <KÃ¶telezÃµ> [VÃ¡laszthatÃ³]
+message.descHelp: Megtekinti a parancslistÃ¡t.
+message.descChangeSky: MegvÃ¡ltoztatja az eget.
+message.descFreeze: FagyasztÃ¡s.
+message.descUnfreeze: VisszafagyasztÃ¡s.
+message.descReload: ÃšjratÃ¶lti a konfigurÃ¡ciÃ³t.
+message.descVersion: A verziÃ³ informÃ¡ciÃ³inak megtekintÃ©se.
+message.pluginLoading: {0} betÃ¶ltÃµdik.
