--- a/SkyChanger-Bukkit/src/main/resources/lang/Messages_iw_IL.properties
+++ b/SkyChanger-Bukkit/src/main/resources/lang/Messages_iw_IL.properties
@@ -33,6 +33,8 @@ success.packetUnfreezeSentTo: נשלחה חבילת מידע ל {0}. (F3+A על 
 error.packetError: נכשלה העברת חבילת המידע.
 error.packetErrorTo: נכשלה העברת חבילת המידע ל {0}.
 error.logPacketError: חבילת המידע לא יכלה להישלח.
+error.radiusFormat: רדיוס חייב להיות מספר.
+error.specifyRadius: עליך לציין רדיוס.
 error.specifyWorld: עליך לציין עולם. 
 error.worldNotFound: העולם {0} אינו קיים.
 error.outOfBoundsUpper: מספר חבילת המידע לא יכול לעלות על {0}.
@@ -42,6 +44,7 @@ error.reloadFail: נכשלה טעינה מחדש של התוסף, בדוק את 
 message.player: שחקן
 message.everyone: כולם
 message.allPlayersIn: כל השחקנים ב
+message.allPlayersInRadius: כל השחקנים ברדיוס
 message.world: עולם
 message.version: גרסה
 message.metrics: מטריקה
