--- a/SkyChanger-Bukkit/src/main/resources/lang/Messages_nl_NL.properties
+++ b/SkyChanger-Bukkit/src/main/resources/lang/Messages_nl_NL.properties
@@ -33,6 +33,8 @@ success.packetUnfreezeSentTo: Packet verzonden naar {0} (F3+A om de chunks te he
 error.packetError: Packet verzenden mislukt.
 error.packetErrorTo: Packet naar {0} verzenden mislukt.
 error.logPacketError: Packet kan niet verzonden worden.
+error.radiusFormat: Straal moet een getal zijn.
+error.specifyRadius: Specificeer een straal.
 error.specifyWorld: Specificeer een wereld.
 error.worldNotFound: De wereld {0} bestaat niet.
 error.outOfBoundsUpper: Het packet nummer mag niet groter zijn dan {0}.
@@ -42,6 +44,7 @@ error.reloadFail: Plugin herladen mislukt, check de console voor details..
 message.player: speler
 message.everyone: iedereen
 message.allPlayersIn: alle spelers in
+message.allPlayersInRadius: alle spelers in straal
 message.world: wereld
 message.version: Versie
 message.metrics: Statistieken
