--- a/SkyChanger-Bukkit/src/main/resources/lang/Messages_no_NO.properties
+++ b/SkyChanger-Bukkit/src/main/resources/lang/Messages_no_NO.properties
@@ -22,33 +22,36 @@
 # THE SOFTWARE.
 #
 
-error.noPermission: Du har ikke tilgang til Â gj¯re dette.
+error.noPermission: Du har ikke tilgang til √• gj√∏re dette.
 error.denyNonPlayer: Bare spillere kan bruke denne kommandoen
 error.packetOverflow: Pakken kunne ikke bli sendt, nummeret er ute av rekkevidde.
-error.playerNotFound: Kan ikke finne spilleren {0}. Er spilleren pÂ nett?
+error.playerNotFound: Kan ikke finne spilleren {0}. Er spilleren p√• nett?
 success.packetSent: Pakke sendt.
 success.packetSentTo: Pakke sendt til {0}. 
-success.packetUnfreezeSent: Pakke sendt. (F3+A fÂr Â reloade blokkene)
-success.packetUnfreezeSentTo: Sendte pakke til {0} (F3+A fÂr Â reloade blokkene)
+success.packetUnfreezeSent: Pakke sendt. (F3+A f√•r √• reloade blokkene)
+success.packetUnfreezeSentTo: Sendte pakke til {0} (F3+A f√•r √• reloade blokkene)
 error.packetError: Sending mislykket.
 error.packetErrorTo: Sendingen til {0} misslykket.
 error.logPacketError: Pakken kunne ikke bli sendt.
-error.specifyWorld: Du mÂ spesifisere verdenen.
+error.radiusFormat: Radius m√• v√¶re et tall.
+error.specifyRadius: Du m√• spesifisere radius.
+error.specifyWorld: Du m√• spesifisere verdenen.
 error.worldNotFound: {0} er ikke en verden.
-error.outOfBoundsUpper: Pakke nummeret kan ikke vÊre mer en {0}.
-error.outOfBoundsLower: Pakke nummeret kan ikke vÊre mindre en {0}.
+error.outOfBoundsUpper: Pakke nummeret kan ikke v√¶re mer en {0}.
+error.outOfBoundsLower: Pakke nummeret kan ikke v√¶re mindre en {0}.
 success.reloadSuccess: Vellyket reload.
-error.reloadFail:  Mislykket reload, se console fÂr mer info.
+error.reloadFail:  Mislykket reload, se console f√•r mer info.
 message.player: Spiller
 message.everyone: Alle
 message.allPlayersIn: Alle spillere i
+message.allPlayersInRadius: Alle spillere i radius
 message.world: Verden
 message.version: Version
 message.metrics: beregninger
 message.source: Kilde
-message.commandList: Kommando Liste - <N¯dvendig> [Valgfri]
+message.commandList: Kommando Liste - <N√∏dvendig> [Valgfri]
 message.descHelp: Se kommando listen.
-message.descChangeSky: Forandre pÂ himmelen.
+message.descChangeSky: Forandre p√• himmelen.
 message.descFreeze: Frys.
 message.descUnfreeze: Frigi.
 message.descReload: Last inn konfigurasjonen.
