--- a/SkyChanger-Sponge/src/main/resources/lang/Messages_zh_CN.properties
+++ b/SkyChanger-Sponge/src/main/resources/lang/Messages_zh_CN.properties
@@ -34,7 +34,7 @@ error.packetError: 数据包发送失败。
 error.packetErrorTo: 数据包无法发送到 {0}。
 error.logPacketError: 数据包无法发送。
 error.radiusFormat: 半径必须是一个数字。
-error.specifyRadius: 您必须指定一个半径。
+error.specifyRadius: 你必须指定一个半径。
 error.specifyWorld: 你必须指定一个世界。
 error.worldNotFound: 这个世界{0}不存在。
 error.outOfBoundsUpper: 数据包号码不能超过 {0}。
