--- a/SkyChanger-Core/src/main/resources/lang/Messages_de_DE.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_de_DE.properties
@@ -39,6 +39,7 @@ error.specifyWorld: Du musst eine Welt angeben.
 error.worldNotFound: Die Welt {0} existiert nicht.
 error.outOfBoundsUpper: Die Paketnummer darf {0} nicht überschreiten.
 error.outOfBoundsLower: Die Paketnummer darf nicht kleiner als {0} sein.
+error.featureUnsupported: Diese Funktion wird in Version(en) {0} nicht unterstützt.
 success.reloadSuccess: Plugin erfolgreich neu geladen.
 error.reloadFail: Plugin konnte nicht neu geladen werden, siehe Konsole für Details.
 message.player: Spieler
