--- a/SkyChanger-Core/src/main/resources/lang/Messages_en_US.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_en_US.properties
@@ -39,6 +39,7 @@ error.specifyWorld: You must specify a world.
 error.worldNotFound: The world {0} does not exist.
 error.outOfBoundsUpper: The packet number must not exceed {0}.
 error.outOfBoundsLower: The packet number must not be less than {0}.
+error.featureUnsupported: This feature is not supported on version(s): {0}.
 success.reloadSuccess: Plugin successfully reloaded.
 error.reloadFail: Plugin failed to reload, see console for details..
 message.player: player
