--- a/SkyChanger-Core/src/main/resources/lang/Messages_es_AR.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_es_AR.properties
@@ -39,6 +39,7 @@ error.specifyWorld: Debes especificar el mundo.
 error.worldNotFound: El mundo {0} no existe.
 error.outOfBoundsUpper: El numero de paquete no debe ser mayor a {0}.
 error.outOfBoundsLower: El numero de paquete no debe ser inferior a {0}.
+error.featureUnsupported: Esta función no es compatible con las versiones: {0}.
 success.reloadSuccess: El plugin ha sido recargado correctamente.
 error.reloadFail: El plugin no pudo ser recargado, revis la consola para obtener mas detalles..
 message.player: jugador
