--- a/SkyChanger-Core/src/main/resources/lang/Messages_es_EC.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_es_EC.properties
@@ -39,6 +39,7 @@ error.specifyWorld: Necesitas especificar un mundo.
 error.worldNotFound: El mundo {0} no existe.
 error.outOfBoundsUpper: El número de paquete no debe exceder {0}.
 error.outOfBoundsLower: El número de paquete no debe ser inferior a{0}.
+error.featureUnsupported: Esta función no es compatible con las versiones: {0}.
 success.reloadSuccess: El Plugin se ha vuelto a cargar correctamente.
 error.reloadFail: El Plugin nose pudo volver a cargar, consulte la consola para obtener más detalles..
 message.player: jugador
