--- a/SkyChanger-Core/src/main/resources/lang/Messages_it_IT.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_it_IT.properties
@@ -39,6 +39,7 @@ error.specifyWorld: Devi specificare un mondo.
 error.worldNotFound: Il mondo {0} non esiste.
 error.outOfBoundsUpper: Il numero del pacchetto non deve superare {0}.
 error.outOfBoundsLower: Il numero del pacchetto non deve essere meno di {0}.
+error.featureUnsupported: Questa funzione non è supportata nelle versioni: {0}.
 success.reloadSuccess: Il plugin è ricaricato con successo.
 error.reloadFail: Il plugin non è riuscito a ricaricare, guarda la console per dettagli..
 message.player: giocatore
