--- a/SkyChanger-Core/src/main/resources/lang/Messages_zh_CN.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_zh_CN.properties
@@ -39,6 +39,7 @@ error.specifyWorld: 你必须指定一个世界。
 error.worldNotFound: 这个世界{0}不存在。
 error.outOfBoundsUpper: 数据包号码不能超过 {0}。
 error.outOfBoundsLower: 数据包号码不能小于 {0}。
+error.featureUnsupported: 版本{0}不支持此功能。
 success.reloadSuccess: 插件重新加载成功。
 error.reloadFail: 插件重新加载失败，请参阅控制台了解详情..
 message.player: 玩家
