Update lang files, pending HU, NO.

--- a/SkyChanger-Core/src/main/resources/lang/Messages_iw_IL.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_iw_IL.properties
@@ -39,6 +39,7 @@ error.specifyWorld: עליך לציין עולם.
 error.worldNotFound: העולם {0} אינו קיים.
 error.outOfBoundsUpper: מספר חבילת המידע לא יכול לעלות על {0}.
 error.outOfBoundsLower: מספר חבילת המידע לא יכול לחסור מ {0}.
+error.featureUnsupported: תכונה זו אינה נתמכת בגרסא(ות): {0}.
 success.reloadSuccess: תוסף נטען מחדש בהצלחה.
 error.reloadFail: נכשלה טעינה מחדש של התוסף, בדוק את קונסול המערכת בשביל פירוט..
 message.player: שחקן
