--- a/SkyChanger-Core/src/main/resources/lang/Messages_ja_JP.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_ja_JP.properties
@@ -39,6 +39,7 @@ error.specifyWorld: ワールドが指定されていません。
 error.worldNotFound: {0}というワールドは存在しません。
 error.outOfBoundsUpper: パケットの番号は{0}を超えてはいけません。
 error.outOfBoundsLower: パケットの番号は{0}以下でなければいけません。
+error.featureUnsupported: この機能はこのバージョンでサポートされていません： {0}。
 success.reloadSuccess: プラグインは正常にリロードされました。
 error.reloadFail: プラグインのリロードに失敗しました, 詳細はコンソールで確認してください…
 message.player: プレイヤー
