--- a/SkyChanger-Core/src/main/resources/lang/Messages_nl_NL.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_nl_NL.properties
@@ -39,6 +39,7 @@ error.specifyWorld: Specificeer een wereld.
 error.worldNotFound: De wereld {0} bestaat niet.
 error.outOfBoundsUpper: Het packet nummer mag niet groter zijn dan {0}.
 error.outOfBoundsLower: Het packet nummer mag niet kleiner zijn dan {0}.
+error.featureUnsupported: Deze functionaliteit wordt niet ondersteund door de volgende versie(s): {0}.
 success.reloadSuccess: Plugin herladen.
 error.reloadFail: Plugin herladen mislukt, check de console voor details..
 message.player: speler
