--- a/SkyChanger-Core/src/main/resources/lang/Messages_hu_HU.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_hu_HU.properties
@@ -25,13 +25,13 @@
 error.noPermission: Nincs jogod ehhez.
 error.denyNonPlayer: Csak a játékosok használhatják ezt a parancsot.
 error.packetOverflow: A csomagot nem lehetett elküldeni, a szám a hatótávolságon kívül esik.
-error.playerNotFound: A játékos nem található {0}. Elérhetõ?
-success.packetSent: Csomag elküldött.
+error.playerNotFound: A játékos nem található {0}. Elérhető?
+success.packetSent: Csomag elküldve.
 success.packetSentTo: Elküldött csomagot {0}.
 success.packetUnfreezeSent: Csomag küldött (F3+A újratölteni a darabokat).
-success.packetUnfreezeSentTo: Elküldött csomagot {0} (F3+A újratölteni a darabokat).
-error.packetError: A csomagküldés sikertelen volt.
-error.packetErrorTo: A csomagküldés sikertelen volt {0}.
+success.packetUnfreezeSentTo: Elkülve a csomag {0} (F3+A újratölteni a darabokat).
+error.packetError: A csomag küldése sikertelen volt.
+error.packetErrorTo: A csomag küldése sikertelen volt {0}.
 error.logPacketError: A csomagot nem lehet elküldeni.
 error.radiusFormat: A sugárnak számnak kell lennie.
 error.specifyRadius: Meg kell adnia egy sugarat.
@@ -39,6 +39,7 @@ error.specifyWorld: Meg kell adnia egy világot.
 error.worldNotFound: A világ {0} nem létezik.
 error.outOfBoundsUpper: A csomagszáma nem haladhatja meg a számot {0}.
 error.outOfBoundsLower: A csomagszáma nem lehet kevesebb {0}.
+error.featureUnsupported: Ez a jellemző nem támogatott a verzió(kon): {0}.
 success.reloadSuccess: A plugin sikeresen újratöltve.
 error.reloadFail: A plugint nem sikerült újratölteni. A részletekért lásd a konzolt...
 message.player: játékos
@@ -49,11 +50,11 @@ message.world: világ
 message.version: Verzió
 message.metrics: Metrics
 message.source: Forrás
-message.commandList: Parancs lista - <Kötelezõ> [Választható]
+message.commandList: Parancs lista - <Kötelező> [Választható]
 message.descHelp: Megtekinti a parancslistát.
 message.descChangeSky: Megváltoztatja az eget.
 message.descFreeze: Fagyasztás.
 message.descUnfreeze: Visszafagyasztás.
 message.descReload: Újratölti a konfigurációt.
 message.descVersion: A verzió információinak megtekintése.
-message.pluginLoading: {0} betöltõdik.
+message.pluginLoading: {0} betöltődik.
