--- a/SkyChanger-Core/src/main/resources/lang/Messages_no_NO.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_no_NO.properties
@@ -39,6 +39,7 @@ error.specifyWorld: Du må spesifisere verdenen.
 error.worldNotFound: {0} er ikke en verden.
 error.outOfBoundsUpper: Pakke nummeret kan ikke være mer en {0}.
 error.outOfBoundsLower: Pakke nummeret kan ikke være mindre en {0}.
+error.featureUnsupported: Denne funksjonen er ikke tilgjengelig på version(er): {0}.
 success.reloadSuccess: Vellyket reload.
 error.reloadFail:  Mislykket reload, se console får mer info.
 message.player: Spiller
