Update to 1.16.1, API breaking changes.
Added support for 1.16.1.
Sky color changes working. Freeze partially working. The freeze is only successful randomly. So it works, but not all the time.
Refactored Bukkit SkyChangeImpl to contain less duplicate code and have it easier to maintain as new versions roll out.
Added a function to ReflectionUtil which can retrieve and cache declared classes.

API BREAKING CHANGES
Renamed the SkyPacket enums to be more in line with what they actually represent.
FADE_VALUE -> RAIN_LEVEL_CHANGE
FADE_TIME -> THUNDER_LEVEL_CHANGE.

Command usage remains the same.

--- a/SkyChanger-Core/src/main/resources/lang/Messages_iw_IL.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_iw_IL.properties
@@ -22,7 +22,7 @@
 # THE SOFTWARE.
 #
 
-﻿error.noPermission: אין בידך את הרשות לעשות זאת.
+error.noPermission: אין בידך את הרשות לעשות זאת.
 error.denyNonPlayer: רק שחקנים מורשים להשתמש בפקודה זו.
 error.packetOverflow: חבילת מידע לא יכלה להישלח, המספר מחוץ לטווח.
 error.playerNotFound: לא ניתן למצוא את השחקן {0}. האם הם מחוברים?
@@ -35,7 +35,7 @@ error.packetErrorTo: נכשלה העברת חבילת המידע ל {0}.
 error.logPacketError: חבילת המידע לא יכלה להישלח.
 error.radiusFormat: רדיוס חייב להיות מספר.
 error.specifyRadius: עליך לציין רדיוס.
-error.specifyWorld: עליך לציין עולם. 
+error.specifyWorld: עליך לציין עולם.
 error.worldNotFound: העולם {0} אינו קיים.
 error.outOfBoundsUpper: מספר חבילת המידע לא יכול לעלות על {0}.
 error.outOfBoundsLower: מספר חבילת המידע לא יכול לחסור מ {0}.
