--- a/SkyChanger-Core/src/main/resources/lang/Messages_fr_FR.properties
+++ b/SkyChanger-Core/src/main/resources/lang/Messages_fr_FR.properties
@@ -25,7 +25,7 @@
 error.noPermission: Vous n'avez pas la permission de faire cela.
 error.denyNonPlayer: Seuls les joueurs peuvent utiliser cette commande.
 error.packetOverflow: Le paquet n'a pas pu être envoyé, le nombre est trop petit / grand.
-error.playerNotFound: Impossible de trouver le joueur {0}. Il est en ligne?
+error.playerNotFound: Impossible de trouver le joueur {0}. Est-il en ligne?
 success.packetSent: Paquet envoyé.
 success.packetSentTo: Paquet envoyé à  {0}.
 success.packetUnfreezeSent: Paquet envoyé (F3+A pour recharger les chunks).
@@ -41,7 +41,7 @@ error.outOfBoundsUpper: Le nombre de paquets ne doit pas dépasser {0}.
 error.outOfBoundsLower: Le numéro de paquet ne doit pas être inférieur à {0}.
 error.featureUnsupported: Cette fonctionnalité n'est pas prise en charge sur cette/ces version(s): {0}.
 success.reloadSuccess: Le plugin a été rechargé avec succès.
-error.reloadFail: Le plugin n'a pas pu se recharger, voir la console pour plus de détails...
+error.reloadFail: Le plugin n'a pas pu se recharger, veuillez vérifier la console pour plus de détails...
 message.player: joueur
 message.everyone: tout le monde
 message.allPlayersIn: tous les joueurs dans
